[workspace]
members = [
    "graal",         # graphics resource abstraction layer
    "mlr",           # "mid-level rendering"
    "mlr-macros",           # "mid-level rendering"
]
resolver = "2"

[workspace.dependencies]
graal = { path = "graal" }
mlr = { path = "mlr" }
mlr-macros = { path = "mlr-macros" }

[profile.release]
debug = true
