[package]
name = "graal"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
ash = "0.37"
bitflags = "2.4.1"
gpu-allocator = "0.24.0"
lazy_static = "1.4.0"
raw-window-handle = "0.6.0"
slotmap = "1.0.2"
graal-spirv = { path = "../graal-spirv" }
#graal-macros = { path = "macros" }
once_cell = "1.18.0"
#glam = { version = "0.24.2", optional = true }
serde_json = "1.0"
tracing = "0.1.40"

[dependencies.winapi]
version = "0.3.9"
optional = true
features = [
    "dcommon",
    "d3d11",
    "dxgi",
    "dxgi1_2",
    "dxgi1_3",
    "dxgiformat",
    "dxgitype",
    "wtypesbase" ]

[dev-dependencies]
winit = "0.29.4"
obj = "0.10.2"
inline-spirv = "0.1.4"
openimageio = { path = "../../openimageio-rs" }
tracing-subscriber = { version = "0.2.17", features = ["fmt"] }
windows = { version = "0.39.0", features = ["Win32_Graphics_Direct3D11", "Win32_Foundation", "Win32_Graphics_Direct3D", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Security"] }

[build-dependencies]
shaderc = "0.7.4"
anyhow = "1.0.38"

[features]
graal-windows = ["winapi"]