[package]
name = "graal"
version = "0.1.0"
authors = ["Alexandre Bléron <alex.bleron@gmail.com>"]
edition = "2018"

[dependencies]
ash = "0.37"
bitflags = "2.4.1"
gpu-allocator = "0.24.0"
raw-window-handle = "0.6.0"
slotmap = "1.0.2"
once_cell = "1.18.0"
#serde_json = "1.0"
tracing = "0.1.40"
thiserror = "1.0.30"
memoffset = "0.9.0"
ordered-float = "4.1.1"
shaderc = "0.8.3"
graal-macros = { workspace = true }
fxhash = "0.2.1"
drop_bomb = "0.1.5"

[dependencies.winapi]
version = "0.3.9"
optional = true
features = [
    "dcommon",
    "d3d11",
    "dxgi",
    "dxgi1_2",
    "dxgi1_3",
    "dxgiformat",
    "dxgitype",
    "wtypesbase" ]

[dev-dependencies]
winit = "0.29.4"
obj = "0.10.2"
glam = "0.24.2"
inline-spirv = "0.1.4"
openimageio = { path = "../../openimageio-rs" }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[build-dependencies]
shaderc = "0.8.3"
anyhow = "1.0.38"

[features]
graal-windows = ["winapi"]