[package]
name = "mlr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = "0.9.0"
ordered-float = "4.1.1"
shaderc = "0.8.3"
once_cell = "1.18.0"
thiserror = "1.0.50"
#bytemuck = { version = "1.14.0", features = ["derive"] }
graal = { workspace = true }
mlr-macros = { workspace = true }

[dev-dependencies]
winit = "0.29.4"
glam = "0.24.2"